New format for toString method and proper description